# grass-shader-animation

./: CMakeLists.txt  Cam.cpp  Cam.h  Grass.cpp  Grass.h  Hair.cpp  Hair.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  Plane.cpp  Plane.h  README.md  ShaderLoader.cpp  grass  grasscam  main.cpp  opengl_test
demoprojekt/: CMakeLists.txt  Grass.cpp  Plane.cpp  Plane.h  ShaderLoader.h  main.cpp
demoprojekt/shader/: grass.frag  grass.vert  plane.frag
shader/: grass.frag  grass.vert  hair.vert  model.frag  model.vert  plane.frag  plane.vert
